<package>
  <name>ros_status_monitor</name>
  <version>0.0.0</version>
  <description>The ros_status_monitor package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mike@todo.todo">mike</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

   <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>ros_type_introspection</build_depend>
    <build_depend>topic_tools</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>ros_type_introspection</run_depend>
    <run_depend>topic_tools</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
